syntax = "proto3";

message Signer {
    bytes signature = 1;
    bytes public_key = 2;
}

message SignedTx {
    bytes inner = 1;
    repeated Signer signers = 2;
}

message DummyTx {
    string val = 1;
    string key = 2;
}

message Address {
    string chain_id = 1;
    bytes local = 2;
}
